--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@
 
 /*Loading Screen*/
 .loading{
-background: rgb(242, 146, 183) no-repeat center center;
+background: rgb(133, 200, 244) no-repeat center center;
 background-size: cover;
 height: 100vh;
 width: 100vw;
@@ -46,7 +46,7 @@ position: fixed;
    min-height: 10vh;
    width: 100%;
 /*linear gradient is how the background goes from the pink to the purple*/
-   background-color: #F0B9C5;
+   background-color: rgb(133, 200, 244);
    background-position: center;
    background-size: cover;
    position: relative;
@@ -59,7 +59,7 @@ position: fixed;
    padding-top: 200px;
    padding-bottom: 360px;
 /*linear gradient is how the background goes from the pink to the purple*/
-   background-image: linear-gradient(#F0B9C5,#C48FC1);
+   background-image: linear-gradient(#63cce3,#36ef55);
    background-position: center;
    background-size: cover;
    position: relative;
@@ -106,7 +106,8 @@ nav img{
 }
 /*the button underline is only seen with cursor on it*/
 .nav-links ul li:hover::after{
-   width: 100%;
+   width: 80%;
+   color: blue;
 }
 /*to make the text into the center of the website*/
 
